--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Demo</string>
-    <string name="OneStep">待办</string>
+    <string name="app_name">待办</string>
     <string name="title_activity_edit">EditActivity</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">待开发</string>
     <string name="add_widget">Add widget</string>
 </resources>
